# meatjet_qat20

./: .flake8  README.md  cookiecutter.json  find_failures.py  meatjet.py  permujet.py  pyproject.toml  qat-meatjet_1_amd64.deb  session_desc.py
.github/: pull_request_template.md
debian/: changelog  control  links  rules
docs/: conf.py  create-package.md  create-repository.md  development-process.md  enable-cicd.md  index.md  link-repo.md  make-release.md
docs/_static/css/: custom.css  termynal.css
docs/_static/js/: custom.js  termynal.js
hooks/: post_gen_project.py
jenkins/: Jenkinsfile_PR  Jenkinsfile_Release  release.py
jobs/: job.yaml.template  job1.yaml
qat_mem/: Makefile  qae_mem_utils.c  qae_mem_utils.h
qat_mem/.tmp_versions/: qat_mem.mod
seaside/: Makefile  buf_handler.c  buf_handler.h  context.c  context.h  cpa_sample_code_dc_utils.c  cpa_sample_code_dc_utils.h  cpr.c  cpr.h  crc32.c  crc32.h  main.c  main.h  meatjet.c  meatjet.h  mg_unit_test.c  mg_unit_test.h  qae_mem_utils.c  qae_mem_utils.h  setenv.sh
tests/: test_gen.py
{{cookiecutter.project_slug.replace('_', '-')}}/: README.md  pyproject.toml
{{cookiecutter.project_slug.replace('_', '-')}}/.github/: pull_request_template.md
{{cookiecutter.project_slug.replace('_', '-')}}/docs/: conf.py
{{cookiecutter.project_slug.replace('_', '-')}}/jenkins/: pull-request.groovy  release.groovy
{{cookiecutter.project_slug.replace('_', '-')}}/src/{{cookiecutter.project_slug}}/: api.py  {{cookiecutter.command_name.lower()}}_command.py
