[tool.poetry]
authors = ["{{cookiecutter.author}}"]
description = "{{cookiecutter.project_description}}"
name = "{{cookiecutter.project_slug.replace('_', '-')}}"
version = "0.1.0"

[[tool.poetry.source]]
default = true
name = "prod-pypi"
url = "{{cookiecutter.pypi_index}}"

[tool.poetry.dependencies]
python = "{{cookiecutter.python_version}}"
{% if cookiecutter.command_name != "default_command" %}
command-wrapper = {version = "^1.0.0", allow-prereleases = true}
{%- endif %}

[tool.poetry.dev-dependencies]
black = "^23.3.0"
pytest-cov = "^4.0.0"
flake8 = "^6.0.0"
flake8-isort = "^6.0.0"
pep8-naming = "^0.13.3"
mccabe = "^0.7.0"
flake8-bandit = "^4.1.1"
flake8-comprehensions = "^3.12.0"
flake8-bugbear = "^23.5.9"
myst-parser = "^1.0.0"
furo = "^2023.3.27"

[tool.isort]
profile = "black"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
